gen/LPPLenguageParser.java
// Generated from /Users/edilberto/Documents/Lenguajes/LPP_Translator/grammar/LPPLenguage.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LPPLenguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, COMMA=7, COMMENT=8, LINE_COMMENT=9, 
		ARREGLO=10, DE=11, PROC=12, VAR=13, TYPE=14, IF=15, WHILE=16, REPEAT=17, 
		FOR=18, FUNCTION=19, RETURN=20, CASE=21, INICIO=22, FIN=23, REGISTRO=24, 
		ENTONCES=25, SINO=26, HAGA=27, ESCRIBA=28, HASTA=29, PARA=30, LEA=31, 
		LLAMAR=32, NUEVA_LINEA=33, ASSGN=34, ARTOP=35, REAL=36, INT=37, LOGOP=38, 
		RELOP=39, STR=40, CHR=41, BOL=42, ID=43, ESP=44;
	public static final int
		RULE_init = 0, RULE_register = 1, RULE_declaration = 2, RULE_type_arr = 3, 
		RULE_dim_arr = 4, RULE_procedure = 5, RULE_proc_declaration = 6, RULE_proc_params = 7, 
		RULE_params = 8, RULE_arr_cad_aux = 9, RULE_arr_cad = 10, RULE_function = 11, 
		RULE_return = 12, RULE_val_return = 13, RULE_commands = 14, RULE_if = 15, 
		RULE_condition = 16, RULE_else = 17, RULE_case = 18, RULE_case__ = 19, 
		RULE_while = 20, RULE_repeat = 21, RULE_until = 22, RULE_for = 23, RULE_init_for = 24, 
		RULE_end_for = 25, RULE_write = 26, RULE_assign = 27, RULE_index_arr_assign = 28, 
		RULE_register_val_assign = 29, RULE_register_val = 30, RULE_exp_assign = 31, 
		RULE_read = 32, RULE_llamar = 33, RULE_lineBreak = 34, RULE_exp = 35, 
		RULE_expArt = 36, RULE_expArt_ = 37, RULE_expArtAux = 38, RULE_expRel = 39, 
		RULE_expRel_ = 40, RULE_index_arr = 41, RULE_lpar = 42, RULE_rpar = 43, 
		RULE_lbra = 44, RULE_rbra = 45, RULE_expRelAux = 46, RULE_expComp = 47, 
		RULE_expComp_ = 48, RULE_comma = 49, RULE_val = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "register", "declaration", "type_arr", "dim_arr", "procedure", 
			"proc_declaration", "proc_params", "params", "arr_cad_aux", "arr_cad", 
			"function", "return", "val_return", "commands", "if", "condition", "else", 
			"case", "case__", "while", "repeat", "until", "for", "init_for", "end_for", 
			"write", "assign", "index_arr_assign", "register_val_assign", "register_val", 
			"exp_assign", "read", "llamar", "lineBreak", "exp", "expArt", "expArt_", 
			"expArtAux", "expRel", "expRel_", "index_arr", "lpar", "rpar", "lbra", 
			"rbra", "expRelAux", "expComp", "expComp_", "comma", "val"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'('", "')'", "':'", "'.'", "','", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'<-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "COMMA", "COMMENT", "LINE_COMMENT", 
			"ARREGLO", "DE", "PROC", "VAR", "TYPE", "IF", "WHILE", "REPEAT", "FOR", 
			"FUNCTION", "RETURN", "CASE", "INICIO", "FIN", "REGISTRO", "ENTONCES", 
			"SINO", "HAGA", "ESCRIBA", "HASTA", "PARA", "LEA", "LLAMAR", "NUEVA_LINEA", 
			"ASSGN", "ARTOP", "REAL", "INT", "LOGOP", "RELOP", "STR", "CHR", "BOL", 
			"ID", "ESP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LPPLenguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LPPLenguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(LPPLenguageParser.INICIO, 0); }
		public TerminalNode FIN() { return getToken(LPPLenguageParser.FIN, 0); }
		public List<RegisterContext> register() {
			return getRuleContexts(RegisterContext.class);
		}
		public RegisterContext register(int i) {
			return getRuleContext(RegisterContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==REGISTRO) {
				{
				{
				setState(102);
				register();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093039616L) != 0)) {
				{
				{
				setState(108);
				declaration();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PROC || _la==FUNCTION) {
				{
				setState(116);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROC:
					{
					setState(114);
					procedure();
					}
					break;
				case FUNCTION:
					{
					setState(115);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(INICIO);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8802806497280L) != 0)) {
				{
				{
				setState(122);
				commands();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegisterContext extends ParserRuleContext {
		public List<TerminalNode> REGISTRO() { return getTokens(LPPLenguageParser.REGISTRO); }
		public TerminalNode REGISTRO(int i) {
			return getToken(LPPLenguageParser.REGISTRO, i);
		}
		public TerminalNode ID() { return getToken(LPPLenguageParser.ID, 0); }
		public TerminalNode FIN() { return getToken(LPPLenguageParser.FIN, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public RegisterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_register; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterRegister(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitRegister(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitRegister(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegisterContext register() throws RecognitionException {
		RegisterContext _localctx = new RegisterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_register);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(REGISTRO);
			setState(131);
			match(ID);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				declaration();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093039616L) != 0) );
			setState(137);
			match(FIN);
			setState(138);
			match(REGISTRO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(LPPLenguageParser.TYPE, 0); }
		public List<TerminalNode> ID() { return getTokens(LPPLenguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LPPLenguageParser.ID, i);
		}
		public List<Arr_cad_auxContext> arr_cad_aux() {
			return getRuleContexts(Arr_cad_auxContext.class);
		}
		public Arr_cad_auxContext arr_cad_aux(int i) {
			return getRuleContext(Arr_cad_auxContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LPPLenguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LPPLenguageParser.COMMA, i);
		}
		public TerminalNode ARREGLO() { return getToken(LPPLenguageParser.ARREGLO, 0); }
		public Dim_arrContext dim_arr() {
			return getRuleContext(Dim_arrContext.class,0);
		}
		public TerminalNode DE() { return getToken(LPPLenguageParser.DE, 0); }
		public Type_arrContext type_arr() {
			return getRuleContext(Type_arrContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(TYPE);
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(141);
					arr_cad_aux();
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(147);
				match(ID);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(148);
					match(COMMA);
					setState(149);
					match(ID);
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				match(ID);
				setState(156);
				match(ID);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(157);
					match(COMMA);
					setState(158);
					match(ID);
					}
					}
					setState(163);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ARREGLO:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				match(ARREGLO);
				setState(165);
				dim_arr();
				setState(166);
				match(DE);
				setState(167);
				type_arr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_arrContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Type_arrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_arr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterType_arr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitType_arr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitType_arr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_arrContext type_arr() throws RecognitionException {
		Type_arrContext _localctx = new Type_arrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_arr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dim_arrContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(LPPLenguageParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(LPPLenguageParser.INT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LPPLenguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LPPLenguageParser.COMMA, i);
		}
		public Dim_arrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dim_arr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterDim_arr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitDim_arr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitDim_arr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dim_arrContext dim_arr() throws RecognitionException {
		Dim_arrContext _localctx = new Dim_arrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dim_arr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(T__0);
			setState(174);
			match(INT);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(175);
				match(COMMA);
				setState(176);
				match(INT);
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode PROC() { return getToken(LPPLenguageParser.PROC, 0); }
		public TerminalNode ID() { return getToken(LPPLenguageParser.ID, 0); }
		public TerminalNode INICIO() { return getToken(LPPLenguageParser.INICIO, 0); }
		public TerminalNode FIN() { return getToken(LPPLenguageParser.FIN, 0); }
		public Proc_declarationContext proc_declaration() {
			return getRuleContext(Proc_declarationContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(PROC);
			setState(185);
			match(ID);
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(186);
				proc_declaration();
				}
			}

			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093039616L) != 0)) {
				{
				{
				setState(189);
				declaration();
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(195);
			match(INICIO);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8802806497280L) != 0)) {
				{
				{
				setState(196);
				commands();
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(202);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Proc_declarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(LPPLenguageParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(LPPLenguageParser.ID, 0); }
		public TerminalNode VAR() { return getToken(LPPLenguageParser.VAR, 0); }
		public List<Arr_cadContext> arr_cad() {
			return getRuleContexts(Arr_cadContext.class);
		}
		public Arr_cadContext arr_cad(int i) {
			return getRuleContext(Arr_cadContext.class,i);
		}
		public List<Proc_paramsContext> proc_params() {
			return getRuleContexts(Proc_paramsContext.class);
		}
		public Proc_paramsContext proc_params(int i) {
			return getRuleContext(Proc_paramsContext.class,i);
		}
		public Proc_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterProc_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitProc_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitProc_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Proc_declarationContext proc_declaration() throws RecognitionException {
		Proc_declarationContext _localctx = new Proc_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_proc_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(204);
			match(T__2);
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(205);
				match(VAR);
				}
			}

			setState(208);
			match(TYPE);
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(209);
				arr_cad();
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(215);
			match(ID);
			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(216);
				proc_params();
				}
				}
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(222);
			match(T__3);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Proc_paramsContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(LPPLenguageParser.COMMA, 0); }
		public TerminalNode TYPE() { return getToken(LPPLenguageParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(LPPLenguageParser.ID, 0); }
		public TerminalNode VAR() { return getToken(LPPLenguageParser.VAR, 0); }
		public List<Arr_cadContext> arr_cad() {
			return getRuleContexts(Arr_cadContext.class);
		}
		public Arr_cadContext arr_cad(int i) {
			return getRuleContext(Arr_cadContext.class,i);
		}
		public Proc_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).enterProc_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPLenguageListener ) ((LPPLenguageListener)listener).exitProc_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPLenguageVisitor ) return ((LPPLenguageVisitor<? extends T>)visitor).visitProc_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Proc_paramsContext proc_params() throws RecognitionException {
		Proc_paramsContext _localctx = new Proc_paramsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_proc_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			match(COMMA);
			setState(226);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(225);
				match(VAR);
				}
			}

			setState(228);
			match(TYPE);
			setState(232);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(229);
				arr_cad();
				}
				}
				setState(234);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(235);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
